# tg

./: .gitignore  Dockerfile  README.md  Taskfile.yml  UNLICENSE  check.sh  colors.py  controller.py  do  main.py  make  model.py  ops  pyproject.toml  readme.md  root  setup.py  tg.py  version  view.py
.github/workflows/: docker-build.yml  main.yml  tdlib-build.yml
tg/: .#main.py  __init__.py  __main__.py  colors.py  config.py  controllers.py  main.py  models.py  msg.py  tdlib.py  update_handlers.py  utils.py  views.py
tg/controllers/: __init__.py
tg/models/: __init__.py
tg/views/: __init__.py
