[tool.poetry]
name = "tg"
version = "0.18.0"
description = "Terminal Telegram client"
authors = ["Paul Nameless <reacsdas@gmail.com>"]
license = "Unlicense"
packages = [{ include = "tg"}]
readme = "readme.md"
homepage = "https://github.com/paul-nameless/tg"
repository = "https://github.com/paul-nameless/tg"

[tool.poetry.dependencies]
python = "^3.8"
python-telegram = "0.15.0"

[tool.poetry.dev-dependencies]
black = "20.8b1"
flake8 = "3.8.4"
isort = "5.6.2"
mypy = "0.812"

[tool.poetry.scripts]
tg = "tg.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
