[project]
name = "tg"
version = "0.19.0"
description = "Terminal Telegram client"
authors = [{ name = "Paul Nameless", email = "reacsdas@gmail.com" }]
license = { text = "Unlicense" }
readme = "readme.md"
urls = { homepage = "https://github.com/paul-nameless/tg", repository = "https://github.com/paul-nameless/tg" }
requires-python = ">=3.9"
dependencies = ["python-telegram==0.15.0", "setuptools (>=78.1.0,<79.0.0)"]

[tool.poetry]
packages = [{ include = "tg" }]

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "^0.11.5"

[project.scripts]
tg = "tg.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"
