[project]
name = "tg"
version = "0.21.0"
description = "Terminal Telegram client"
authors = [{ name = "Paul Nameless", email = "reacsdas@gmail.com" }]
license = { text = "Unlicense" }
readme = "readme.md"
urls = { homepage = "https://github.com/paul-nameless/tg", repository = "https://github.com/paul-nameless/tg" }
requires-python = ">=3.9,<4.0.0"
dependencies = ["python-telegram==0.19.0", "mailcap-fix (>=1.0.1,<2.0.0)"]

[tool.poetry]
name = "tg"
version = "0.21.0"
description = "Terminal Telegram client"
authors = ["Paul Nameless <reacsdas@gmail.com>"]
license = "Unlicense"
readme = "readme.md"
homepage = "https://github.com/paul-nameless/tg"
repository = "https://github.com/paul-nameless/tg"
packages = [{ include = "tg" }]

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "^0.11.5"

[project.scripts]
tg = "tg.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.9"
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = false
warn_unreachable = true
strict_equality = true
warn_unused_configs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

[[tool.mypy.overrides]]
module = ["tg.models", "tg.tdlib", "tg.controllers"]
ignore_errors = true
